# LoggerCPP

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTORS.txt  README.md  TODO.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  main.cpp
include/logger/: LoggerCPP.hpp
include/logger/common/: Channel.hpp
include/logger/common/datatypes/: Severity.hpp  SharedPointer.hpp
include/logger/common/dataunits/: Log.hpp
include/logger/common/options/: Options.h  OutputStream.h
include/logger/configurations/: Configuration.hpp  Manager.hpp
include/logger/libvars/: Definitions.hpp  Extension.hpp
include/logger/logger/: Logger.hpp
include/logger/output/concrete/: OutputConsole.hpp  OutputFile.hpp
include/logger/output/interface/: Output.hpp
include/logger/utils/: ConsoleColors.hpp  Timestamp.hpp  Utils.hpp
logger/: CMakeLists.txt
logger/include/: LoggerCPP.h
logger/include/Base/: Channel.h  Configuration.h  Log.h  Logger.h  Manager.h
logger/include/Output/: Output.h
logger/include/Output/Stream/: OutputConsole.h  OutputFile.h
logger/include/Utils/: ConsoleColors.h  Timestamp.h  Utils.h
logger/include/Utils/DataTypes/: Severity.h  SharedPointer.h
logger/include/Utils/LibVars/: Definitions.h  Extension.h
logger/include/Utils/Options/: Options.h  OutputStream.h
logger/src/Base/: Configuration.cpp  Log.cpp  Manager.cpp
logger/src/Output/Stream/: OutputConsole.cpp  OutputFile.cpp
logger/src/Utils/: Timestamp.cpp  Utils.cpp
prerequisites/catch/: catch.hpp
src/: CMakeLists.txt
src/common/dataunits/: Log.cpp
src/configurations/: Configuration.cpp  Manager.cpp
src/output/concrete/: OutputConsole.cpp  OutputFile.cpp
src/utils/: Timestamp.cpp  Utils.cpp
tests/: CMakeLists.txt
